# zksettle

./: .dockerignore  .env.example  .gitignore  .railwayignore  IMPLEMENTATION_STATUS.md  README.md  docker-compose.e2e.yml  docker-compose.yml  gotchas.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  zksettle_adr.md  zksettle_pitch.md  zksettle_prd.md
.github/workflows/: build.yml  e2e.yml  mutants.yml
backend/: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  mutants.toml  package-lock.json  package.json
backend/.cargo/: mutants.toml
backend/artefacts/: zksettle_slice.ccs  zksettle_slice.json
backend/crates/api-gateway/: Cargo.toml
backend/crates/api-gateway/migration/: Cargo.toml
backend/crates/api-gateway/migration/src/: lib.rs  m20260426_001_create_gateway_tables.rs  m20260502_001_create_tenants.rs
backend/crates/api-gateway/src/: auth.rs  auth_jwt.rs  config.rs  error.rs  jwt.rs  key_store.rs  lib.rs  main.rs  metering.rs  nonce_store.rs  proxy.rs  rate_limit.rs  siws.rs  tenant_store.rs  upstream.rs
backend/crates/api-gateway/src/config/: db.rs  mod.rs  settings.rs
backend/crates/api-gateway/src/entity/: api_key.rs  daily_usage.rs  mod.rs  tenant.rs  usage_record.rs
backend/crates/api-gateway/src/routes/: auth.rs  challenge.rs  keys.rs  mod.rs  usage.rs
backend/crates/indexer/: Cargo.toml
backend/crates/indexer/migration/: Cargo.toml
backend/crates/indexer/migration/src/: lib.rs  m20260430_001_create_events_table.rs  m20260430_002_add_slot_id_index.rs  m20260501_001_drop_payer_column.rs
backend/crates/indexer/src/: config.rs  dedup.rs  error.rs  events_store.rs  lib.rs  main.rs
backend/crates/indexer/src/config/: db.rs  settings.rs
backend/crates/indexer/src/entity/: event.rs
backend/crates/indexer/src/helius/: mod.rs  parse.rs  payload.rs
backend/crates/indexer/src/irys/: client.rs  mod.rs  types.rs
backend/crates/indexer/src/routes/: events.rs  health.rs  mod.rs  webhook.rs
backend/crates/issuer-service/: Cargo.toml
backend/crates/issuer-service/src/: auth.rs  chain.rs  config.rs  convert.rs  error.rs  main.rs  persist.rs  rotation.rs  state.rs
backend/crates/issuer-service/src/handlers/: add_wallet.rs  get_credential.rs  get_jurisdiction_proof.rs  get_proof.rs  get_roots.rs  get_sanctions_proof.rs  health.rs  issue_credential.rs  mod.rs  prove_groth16.rs  publish.rs  revoke_credential.rs
backend/crates/sanctions-updater/: Cargo.toml
backend/crates/sanctions-updater/src/: build.rs  chain.rs  config.rs  convert.rs  error.rs  fetch.rs  main.rs
backend/crates/zksettle-config/: Cargo.toml
backend/crates/zksettle-config/src/: lib.rs
backend/crates/zksettle-crypto/: Cargo.toml
backend/crates/zksettle-crypto/src/: error.rs  lib.rs  merkle.rs  smt.rs
backend/crates/zksettle-crypto/src/poseidon2/: mod.rs  params.rs  sponge.rs
backend/crates/zksettle-crypto/tests/: fixture.rs
backend/crates/zksettle-rpc/: Cargo.toml
backend/crates/zksettle-rpc/src/: lib.rs  mock.rs  real.rs
backend/crates/zksettle-types/: Cargo.toml
backend/crates/zksettle-types/src/: accounts.rs  credential.rs  error.rs  events.rs  gateway.rs  lib.rs  policy.rs
backend/migrations/: deploy.ts
backend/programs/stablecoin/: Cargo.toml
backend/programs/stablecoin/src/: error.rs  lib.rs  test_helpers.rs
backend/programs/stablecoin/src/instructions/: approve_redemption.rs  burn_tokens.rs  cancel_redemption.rs  cpi_helpers.rs  freeze_account.rs  freeze_thaw.rs  initialize_mint.rs  mint_tokens.rs  mod.rs  pause.rs  propose_accept_admin.rs  request_redemption.rs  set_operator.rs  thaw_account.rs  transfer_authority.rs  update_mint_cap.rs
backend/programs/stablecoin/src/state/: mod.rs  redemption.rs  seeds.rs  treasury.rs
backend/programs/stablecoin/tests/: events_test.rs  freeze_thaw_test.rs  helpers.rs  mint_burn_test.rs  mint_cap_test.rs  pause_test.rs  propose_accept_admin_test.rs  redemption_test.rs  set_operator_test.rs  transfer_authority_test.rs
backend/programs/zksettle/: Cargo.toml  build.rs  default.vk
backend/programs/zksettle/src/: constants.rs  cu_probe.rs  error.rs  instructions.rs  lib.rs  state.rs  test_utils.rs
backend/programs/zksettle/src/instructions/: bubblegum_mint.rs  check_attestation.rs  init_attestation_tree.rs  register_issuer.rs  settle_core.rs  transfer_hook.rs  verify_proof.rs
backend/programs/zksettle/src/instructions/transfer_hook/: handlers.rs  mod.rs  settlement.rs  tests.rs  types.rs
backend/programs/zksettle/src/instructions/verify_proof/: bindings.rs  handler.rs  helpers.rs  mod.rs  tests.rs
backend/programs/zksettle/src/state/: attestation.rs  bubblegum_tree.rs  compressed.rs  issuer.rs  nullifier.rs  pubinputs.rs  seeds.rs
backend/programs/zksettle/tests/: check_attestation.rs  cross_program_integration.rs  light_smoke.rs  nullifier.rs  register_issuer.rs  transfer_hook_smoke.rs  verify.rs
backend/programs/zksettle/tests/common/: mod.rs
backend/programs/zksettle/tests/helpers/: harness.rs  instructions.rs  mod.rs  stablecoin_ixs.rs
circuits/: Nargo.toml  Prover.toml  README.md
circuits/src/: main.nr
docs/: benchmarks.md
docs/plans/: issue-172-admin-dashboard.md
frontend/: .env.example  .gitignore  DESIGN.md  INTEGRATION.md  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/e2e/: api-keys.spec.ts  counterparties.spec.ts  credentials.spec.ts  events.spec.ts  fixtures.ts  health.spec.ts  policies.spec.ts  proofs.spec.ts  prove.spec.ts  team.spec.ts  usage.spec.ts
frontend/ralph/: .last-branch  prd.json  progress.txt
scripts/: compile-circuit.sh  generate-fixture.sh  generate-idl.sh  init-test-dbs.sql  stress-test.ts
scripts/devnet-hook/: package-lock.json  package.json  setup.ts  transfer.ts  tsconfig.json
scripts/fixture-noir/: Nargo.toml  Prover.toml
scripts/lib/: benchmark-utils.ts
sdk/: README.md  package.json  tsconfig.json
sdk/src/: anchor-browser.d.ts  anchor.ts  constants.ts  index.ts  types.ts
(+253 files in other folders)
