[workspace]
members = [
    "programs/*",
    "crates/*",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Consider a workspace-level patch override once upstream compatibility allows it
# [patch.crates-io]
# spl-token-2022 = "=8.0.1"
