[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
description = "Off-chain indexer: Helius webhook → ProofSettled parsing → Irys/Arweave persistence"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
zksettle-types = { path = "../zksettle-types", features = ["borsh", "serde"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = { version = "1", features = ["derive"] }
base64 = "0.22"
bs58 = "0.5"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
moka = { version = "0.12", features = ["sync"] }
rocksdb = "0.24"
sha2 = "0.10"
mutants = "0.0.3"

[dev-dependencies]
axum-test = "16"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
