[package]
name = "issuer-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "issuer-service"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
solana-sdk = "2.3"
solana-rpc-client = "2.3"
ark-bn254 = "0.5"
ark-ff = "0.5"
zksettle-config = { path = "../zksettle-config" }
zksettle-crypto = { path = "../zksettle-crypto" }
zksettle-rpc = { path = "../zksettle-rpc" }
zksettle-types = { path = "../zksettle-types", features = ["borsh", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
borsh = "1"
sha2 = "0.10"
subtle = "2"
mutants = "0.0.3"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
zksettle-rpc = { path = "../zksettle-rpc", features = ["test-util"] }
