[package]
name = "stablecoin"
version = "0.1.0"
description = "ZKSettle stablecoin mint/burn lifecycle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablecoin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["interface-instructions"] }
anchor-spl = { version = "=0.31.1", features = ["token_2022"] }

[dev-dependencies]
spl-token-2022 = "6.0"
solana-signer = "2.2"
solana-keypair = "2.2"
litesvm = "0.7.1"
solana-message = "2.2"
solana-transaction = "2.2"
solana-instruction = "2.2"
solana-pubkey = "2.2"
solana-transaction-error = "2.2"
base64 = "0.22"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
