[package]
name = "zksettle"
version = "0.1.0"
description = "ZKSettle thin-slice verifier"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zksettle"

[features]
# `placeholder-vk` is kept as an opt-in flag for bisecting against the old
# single-pub-input verifying key. The committed `default.vk` is now the real
# compliance VK (2 pub inputs: MERKLE_ROOT_IDX, NULLIFIER_IDX).
default = []
placeholder-vk = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.0"
gnark-verifier-solana = { git = "https://github.com/reilabs/sunspot.git", rev = "ce4765ccdf050507874bbb544be992a11dc48ffc" }

[build-dependencies]
gnark-verifier-solana = { git = "https://github.com/reilabs/sunspot.git", rev = "ce4765ccdf050507874bbb544be992a11dc48ffc" }

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-instruction = "3.0.0"
solana-clock = "3.0.0"
solana-compute-budget-interface = "3.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
