[package]
name = "zksettle"
version = "0.1.0"
description = "ZKSettle thin-slice verifier"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zksettle"

[features]
# `placeholder-vk` is kept as an opt-in flag for bisecting against the old
# single-pub-input verifying key. The committed `default.vk` is now the real
# compliance VK (2 pub inputs: MERKLE_ROOT_IDX, NULLIFIER_IDX).
default = []
placeholder-vk = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "=0.31.1"
gnark-verifier-solana = { git = "https://github.com/reilabs/sunspot.git", rev = "ce4765ccdf050507874bbb544be992a11dc48ffc" }
light-sdk = { version = "=0.23.0", default-features = false, features = ["v2", "anchor"] }
borsh = "0.10.4"

[build-dependencies]
gnark-verifier-solana = { git = "https://github.com/reilabs/sunspot.git", rev = "ce4765ccdf050507874bbb544be992a11dc48ffc" }

[dev-dependencies]
litesvm = "=0.7.0"
solana-message = "2.4"
solana-transaction = "2.2"
solana-signer = "2.2"
solana-keypair = "2.2"
solana-instruction = "2.3"
solana-transaction-error = "2.2"
solana-clock = "2.2"
solana-compute-budget-interface = "2.2"
light-program-test = "=0.23.0"
light-client = "=0.23.0"
tokio = { version = "1", features = ["full"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
