[package]
name = "zksettle"
version = "0.1.0"
description = "ZKSettle thin-slice verifier"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zksettle"

[features]
# `placeholder-vk` is kept as an opt-in flag for bisecting against the old
# single-pub-input verifying key. The committed `default.vk` is now the real
# compliance VK (2 pub inputs: MERKLE_ROOT_IDX, NULLIFIER_IDX).
default = []
placeholder-vk = []
cpi = ["no-entrypoint"]
# Integration tests that boot the full light-program-test harness.
# Require a running prover server (see light-program-test README).
light-tests = []
# Emit `sol_log_compute_units` probes around the transfer_hook critical
# section (verify_bundle + Light CPI) so CU cost can be measured under the
# ADR-022 250K ceiling. Off by default to avoid probe overhead in prod.
hook-cu-probe = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "=0.31.1", features = ["interface-instructions"] }
anchor-spl = { version = "=0.31.1", features = ["token_2022"] }
gnark-verifier-solana = { git = "https://github.com/reilabs/sunspot.git", rev = "ce4765ccdf050507874bbb544be992a11dc48ffc" }
light-sdk = { version = "=0.23.0", default-features = false, features = ["v2", "anchor"] }
borsh = "0.10.4"
spl-tlv-account-resolution = "0.11.1"
spl-transfer-hook-interface = "2.1.0"

[build-dependencies]
gnark-verifier-solana = { git = "https://github.com/reilabs/sunspot.git", rev = "ce4765ccdf050507874bbb544be992a11dc48ffc" }

[dev-dependencies]
solana-signer = "2.2"
solana-keypair = "2.2"
solana-instruction = "2.3"
light-program-test = "=0.23.0"
tokio = { version = "1", features = ["full"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
